# assimp

./: README.md  remove_bins.py
1_serial_loading/: README.md
1_serial_loading/include/: modelloader.cpp  modelloader.h
1_serial_loading/src/: CMakeLists.txt  Makefile  main.cpp
1_serial_loading/src/shaders/: Makefile
2_recursive_loading/: README.md
2_recursive_loading/include/: gamesettings.h  modelloader.cpp  modelloader.h
2_recursive_loading/src/: main.cpp
2_recursive_loading/src/shaders/: fragment_shader.frag  vertex_shader.vert
3_diffuse_textures/: CMakeLists.txt  README.md
3_diffuse_textures/include/: Mesh.cpp  Mesh.h  gamesettings.cpp  modelloader.cpp  modelloader.h
3_diffuse_textures/src/: main.cpp
3_diffuse_textures/src/shaders/: fragment_shader.frag  vertex_shader.vert
4_diffuse_specular_textures/: CMakeLists.txt  README.md
4_diffuse_specular_textures/include/: Makefile  \  modelloader.cpp  modelloader.h
4_diffuse_specular_textures/src/: Makefile  main.cpp
4_diffuse_specular_textures/src/shaders/: fragment_shader.frag  vertex_shader.vert
resources/teapot/: Chaynik.blend  Chaynik.mtl  Chaynik.stl
